Fix misalignment issue when no featured image + featured label + category

--- a/assets/blocks/course-categories-block/course-categories.scss
+++ b/assets/blocks/course-categories-block/course-categories.scss
@@ -3,30 +3,25 @@ $block: 'sensei-lms-course-categories';
 // :root selector increases the CSS specificity,
 // without it the text-decoration: none; for links is ignored.
 :root .wp-block-#{$block} {
-	--#{$block}-text-color: var(--wp--preset--color--background, #fffff);
+	--#{$block}-text-color: var(--wp--preset--color--background, #ffffff);
 	--#{$block}-background-color: var(--wp--preset--color--foreground, #0170B9);
 
-	margin: 10px 0;
 	width: 100%;
 
 	> a {
-		background-color: var( --#{$block}-background-color );
+		background-color: var(--#{$block}-background-color);
 		border-radius: 2px;
-		display: inline-flex;
-		margin-bottom: 5px;
+		color: var(--#{$block}-text-color);
+		display: inline-block;
+		font-size: 11px;
+		line-height: 16px;
 		padding: 3px 6px;
 		text-decoration: none;
+		vertical-align: top;
 		white-space: nowrap;
 
-		&:not( :last-child ) {
+		&:not(:last-child) {
 			margin-right: 10px;
-		}
-
-		& span {
-			color: var( --#{$block}-text-color );
-			font-size: 11px;
-			letter-spacing: normal;
-			line-height: 16px;
 		}
 	}
 }
